--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@rdfjs/types": "^1.0.1",
     "@types/jsonld": "^1.5.6",
-    "jsonld": "^5.2.0"
+    "jsonld": "^5.2.0",
+    "jsonld-context-parser": "^2.1.5"
   }
 }
