--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/o-development/jsonld2graphobject#readme",
   "devDependencies": {
     "@types/jest": "^27.0.3",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.3.0",
@@ -41,6 +42,7 @@
     "@rdfjs/types": "^1.0.1",
     "@types/jsonld": "^1.5.6",
     "jsonld": "^5.2.0",
-    "jsonld-context-parser": "^2.1.5"
+    "jsonld-context-parser": "^2.1.5",
+    "uuid": "^8.3.2"
   }
 }
