--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsonld2graphobject",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Converts JSON-LD to an Object Literal Graph",
   "main": "dist/index.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "jest": "^27.4.2",
     "o-dataset-pack": "^0.2.0",
     "prettier": "^2.5.0",
+    "shex-test": "^2.1.0",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.10",
